# pyautogui_mcp_server

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
pyautogui_mcp_server/: __info__.py  __init__.py  runtime.py  server.py  wake.py
tests/: test_cli.py  test_metadata.py  test_server_middleware.py
